--- a/Layout/NavMenu.razor
+++ b/Layout/NavMenu.razor
@@ -1,4 +1,8 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿@using EventEase.Services
+@inject UserService UserService
+@inject NavigationManager Navigation
+
+<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="">EventEase</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
@@ -29,6 +33,14 @@
                 <span class="bi bi-box-arrow-in-right-nav-menu" aria-hidden="true"></span> Login
             </NavLink>
         </div>
+        @if (UserService.IsUserLoggedIn())
+        {
+            <div class="nav-item px-3">
+                <button class="nav-link btn btn-link" @onclick="Logout">
+                    <span class="bi bi-box-arrow-right-nav-menu" aria-hidden="true"></span> Logout
+                </button>
+            </div>
+        }
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="counter">
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
@@ -42,6 +54,7 @@
     </nav>
 </div>
 
+
 @code {
     private bool collapseNavMenu = true;
 
@@ -50,5 +63,11 @@
     private void ToggleNavMenu()
     {
         collapseNavMenu = !collapseNavMenu;
+    }
+
+    private async Task Logout()
+    {
+        await UserService.Logout();
+        Navigation.NavigateTo("/");
     }
 }
